[package]
name = "problem-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "DocumentFragment",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlTemplateElement",
  "MouseEvent",
  "Node",
  "NodeList",
  "Storage",
  "Text",
  "Window",
]

[profile.release]
opt-level = "s"
lto = true
